--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+/* reset css */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* estilização do corpo da página */
 body {
   background-color: aliceblue;
   font-family: Arial, Helvetica, sans-serif;
@@ -24,6 +32,10 @@ h1 {
   border-radius: 10px;
   background-color: aliceblue;
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
+}
+
+.card-cidades *{
+  margin-bottom: 25px;
 }
 
 a {
