--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,15 @@ h1 {
   padding: 30px;
 }
 
+h2 {
+  margin-top: 35px;
+  padding: 20px;
+  display: block;
+}
 .card-cidades {
+  margin-top: 35px;
   padding: 30px;
   width: 90%;
-  margin-bottom: 30px;
   text-align: center;
   border: 1px solid #d8d8d8;
   border-radius: 10px;
@@ -35,7 +40,7 @@ h1 {
 }
 
 .card-cidades *{
-  margin-bottom: 25px;
+  margin-bottom: 30px;
 }
 
 a {
@@ -49,7 +54,7 @@ button {
   width: 220px;
   height: 50px;
   border: none;
-  margin-bottom: 30px;
+  margin: 30px 0 30px 0;
 }
 
 button:hover {
